# videre

./: .gitignore  Justfile  README.md  claude_client.py  integration.py  main.py  pyproject.toml
backend/: .env.example  README.md  pyproject.toml
backend/media/videos/gtts-example/480p15/: GTTSExample.srt
backend/media/videos/gtts-example/480p15/partial_movie_files/GTTSExample/: partial_movie_file_list.txt
backend/media/voiceovers/: cache.json
backend/src/: pyproject.toml
backend/src/examples/: bookmark-example.py  claude-example.py  elevenlabs-example.py  generated-manim-claude.py  p-t-v-eleven.py  p-t-v-gtts.py  p-v-gtts.py
backend/src/videre/: database.py  integration.py  main.py  models.py
backend/src/videre/utils/: .mcp.json  claude_client.py  create_video.py  fetch_context7_docs.py  send_to_aws.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: FeatureCard.tsx  GeometricBackground.tsx
frontend/src/components/ui/: button.tsx  sonner.tsx
frontend/src/pages/: GenerateVideo.tsx  History.tsx  Index.tsx  VideoDisplay.tsx  VideoEditor.tsx
